--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,19 +1,12 @@
 {
-  "arrowParens": "avoid",
-  "bracketSpacing": true,
-  "htmlWhitespaceSensitivity": "ignore",
-  "insertPragma": false,
-  "jsxBracketSameLine": false,
-  "jsxSingleQuote": false,
-  "printWidth": 120,
-  "proseWrap": "never",
-  "quoteProps": "as-needed",
-  "requirePragma": false,
-  "semi": true,
-  "singleQuote": false,
-  "tabWidth": 2,
-  "trailingComma": "all",
-  "useTabs": true,
-  "vueIndentScriptAndStyle": false,
-  "singleAttributePerLine": false
+  "printWidth" : 100 ,
+  "tabWidth" : 2 ,
+  "useTabs" : false ,
+  "semi" : правда ,
+  "singleQuote" : правда ,
+  " trailingComma" : " es5 " ,
+  "bracketSpacing" : правда ,
+  "jsxBracketSameLine" : false ,
+  "arrowParens" : " уникати " ,
+  "proseWrap" : " завжди "
 }
